src/objects/Forecast__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_Forecast__c</fullName>
        <formula>Southern_Forecast__c  +  Northern_Forecast__c  +  Eastern_Forecast__c  +  Western_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Direct_Forecast__c</fullName>
        <label>Direct Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eastern_Forecast__c</fullName>
        <label>Eastern Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Northern_Forecast__c</fullName>
        <label>Northern Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Month__c</fullName>
        <label>Reporting Month</label>
        <referenceTo>Reporting_Month__c</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Southern_Forecast__c</fullName>
        <label>Southern Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Forecast__c</fullName>
        <formula>Dealer_Forecast__c  +  Direct_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Forecasts</relationshipLabel>
        <relationshipName>Forecasts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Western_Forecast__c</fullName>
        <label>Western Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Forecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Forecast_April_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>April 2014</value>
        </filters>
        <label>Forecast April 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_August_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>August 2014</value>
        </filters>
        <label>Forecast August 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_December_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>December 2014</value>
        </filters>
        <label>Forecast December 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_February_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>February 2014</value>
        </filters>
        <label>Forecast February 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_February_2015</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>February 2015</value>
        </filters>
        <label>Forecast February 2015</label>
    </listViews>
    <listViews>
        <fullName>Forecast_January_2014</fullName>
        <columns>NAME</columns>
        <columns>Report_Month__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>January 2014</value>
        </filters>
        <label>Forecast January 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_January_2015</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>January 2015</value>
        </filters>
        <label>Forecast January 2015</label>
    </listViews>
    <listViews>
        <fullName>Forecast_July_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>July 2014</value>
        </filters>
        <label>Forecast July 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_June_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>June 2014</value>
        </filters>
        <label>Forecast June 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_March_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>March 2014</value>
        </filters>
        <label>Forecast March 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_March_2015</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>March 2015</value>
        </filters>
        <label>Forecast March 2015</label>
    </listViews>
    <listViews>
        <fullName>Forecast_May_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>May 2014</value>
        </filters>
        <label>Forecast May 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_November_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>November 2014</value>
        </filters>
        <label>Forecast November 2014</label>
    </listViews>
    <listViews>
        <fullName>Forecast_October_2014</fullName>
        <columns>Vehicle__c</columns>
        <columns>Report_Month__c</columns>
        <columns>Total_Forecast__c</columns>
        <columns>Direct_Forecast__c</columns>
        <columns>Dealer_Forecast__c</columns>
        <columns>Eastern_Forecast__c</columns>
        <columns>Northern_Forecast__c</columns>
        <columns>Southern_Forecast__c</columns>
        <columns>Western_Forecast__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Report_Month__c</field>
            <operation>equals</operation>
            <value>October 2014</value>
        </filters>
        <label>Forecast October 2014</label>
    </listViews>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Product_Level</fullName>
        <active>true</active>
        <errorConditionFormula>Vehicle__r.SFDC_Product_Level__c &lt;&gt; 1&amp;&amp; Vehicle__r.Do_Not_Enforce_Product_Level_Validation__c = FALSE</errorConditionFormula>
        <errorMessage>Select a vehicle at level 1 in the product hierarchy.</errorMessage>
    </validationRules>
</CustomObject>